# Algorithm

./: CMakeLists.txt  main.cpp
include/: Example.h  SmartPointer.h  lib.h
include/Algorithm/: Searching.h  Sorting.h  Stack.h
include/Behavioral/: Observer.h
include/Creational/: Singleton.h
src/: Example.cpp  SmartPointer.cpp
src/Algorithm/: Searching.cpp  Sorting.cpp  Stack.cpp
src/Behavioral/: Observer.cpp
src/Creational/: Singleton.cpp
